err/snap.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/snap'...
Listing './lib/python3.5/site-packages/snap/browser'...
Compiling './lib/python3.5/site-packages/snap/browser/view.py'...
***   File "./lib/python3.5/site-packages/snap/browser/view.py", line 131
    raise NotImplementedError, 'You need to implement this'
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/snap/exceptions'...
Listing './lib/python3.5/site-packages/snap/filter'...
Compiling './lib/python3.5/site-packages/snap/filter/config.py'...
***   File "./lib/python3.5/site-packages/snap/filter/config.py", line 47
    except ImportError, v:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/snap/path'...
Compiling './lib/python3.5/site-packages/snap/registry.py'...
***   File "./lib/python3.5/site-packages/snap/registry.py", line 17
    raise KeyError, name
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/snap/tests'...
Listing './lib/python3.5/site-packages/snap-0.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
